increased width of nav-stopgap

--- a/css/styles.css
+++ b/css/styles.css
@@ -258,7 +258,7 @@ html {
 }
 
 .my-nav-stopgap {
-  width: 67.5vw;
+  width: 67.9vw;
   height: 100vh;
   background-image: linear-gradient(
     90deg,
